--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -13,7 +13,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/banner-d.png" class="d-block w-100" alt="Banner de moda de verano" class="h-25">
+                <img src="{% static 'img/banner-d.png' %}" class="d-block w-100" alt="Banner de moda de verano" class="h-25">
               </div>
               <div class="carousel-item">
                 <img src="img/2.png" class="d-block w-100" alt="Moda de verano" class="h-25">
