--- a/base/templates/partials/body.html
+++ b/base/templates/partials/body.html
@@ -10,8 +10,7 @@
     {% bootstrap_javascript %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'Swiper/swiper-bundle.min.css' %}"/>
-    {% comment %} <link rel="shortcut icon" href="{% static 'img/Logo.png' %}"> {% endcomment %}
-    
+    <link rel="shortcut icon" href="{% static 'img/icon_3.png' %}"> 
     <!- para las alertas ->
     {% comment %} <link href="{% static 'Toastr/css/toastr.min.css' %}" rel="stylesheet"> {% endcomment %}
 </head>
