--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -15,12 +15,12 @@
               <div class="carousel-item active">
                 <img src="{% static 'img/banner-d.png' %}" class="d-block w-100" alt="Banner de moda de verano" class="h-25">
               </div>
-              <div class="carousel-item">
-                <img src="img/2.png" class="d-block w-100" alt="Moda de verano" class="h-25">
-              </div>
-              <div class="carousel-item">
-                <img src="img/3.png" class="d-block w-100" alt="Moda de verano" class="h-25">
-              </div>
+              {% for slider in sliders%}
+                <div class="carousel-item">
+                  <img src= "{{ slider.imagen.url }}" class="d-block w-100" alt="Moda de verano" class="h-25">
+                </div>
+              {% endfor %}
+              
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
