--- a/base/templates/partials/footer.html
+++ b/base/templates/partials/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% comment %} {% load bootstrap_icons %} {% endcomment %}
+{% load bootstrap_icons %}
 <footer class="bg-dark bg-gradient py-2 mt-2">
     <div class="container">
       <div class="row">
@@ -17,10 +17,10 @@
         <div class="col-md-4">
           <h5 class="text-center text-success text-opacity-75">Redes Sociales</h5>
           <ul class="list-unstyled">
-            <li class="text-center"><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li class="text-center"><a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li class="text-center"><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li class="text-center"><a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li class="text-center"><a href="https://www.facebook.com/" target="_blank">{% bs_icon 'facebook' %}</a></li>
+            <li class="text-center"><a href="https://www.twitter.com/" target="_blank">{% bs_icon 'twitter' %}</a></li>
+            <li class="text-center"><a href="https://www.instagram.com/" target="_blank">{% bs_icon 'instagram' %}</a></li>
+            <li class="text-center"><a href="https://www.linkedin.com/" target="_blank">{% bs_icon 'linkedin' %}</a></li>
           </ul>
         </div>
       </div>
