--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -24,14 +24,14 @@
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{% bs_icon 'list-task' %}
                       Categorías
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="calzado.html">Calzado</a></li>
+                      <li><a class="dropdown-item" href="calzado.html">{% bs_icon 'person-walking' %}Calzado</a></li>
                       <li><a class="dropdown-item" href="vestidos.html">{% bs_icon 'person-standing-dress' %}Vestidos</a></li>
                       <!-- <li><hr class="dropdown-divider"></li> -->
-                      <li><a class="dropdown-item" href="jeans.html">Jeans</a></li>
+                      <li><a class="dropdown-item" href="jeans.html">{% bs_icon 'person-standing' %}Jeans</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
