--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -23,6 +23,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="productos.html">Productos</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">{% bs_icon 'bag-check' %}Descuentos</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{% bs_icon 'list-task' %}
                       Categorías
