--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -58,4 +58,89 @@
         </div>
 </section>
 
+<section class="Productos_inicio">
+  <h2 class="text-center my-3">Productos</h2>
+  <div class="container mb-2">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="img/tacones_1.jpg" class="object-fit-md" class="card-img-top" alt="Tacones De mujer">
+          <div class="card-body">
+            <h5 class="card-title">Tacones Romance</h5>
+            <p class="card-text">Zapato de tacón con detalle de tacón curvado, pulsera al frente, Acabado en punta. Tacones de calidad, mezcla channel.</p>
+            <p class="fs-4 text-danger display-2"><del>$ 30.000</del></p>
+            <p class="fs-4 text-info display-4">30 % de descuento</p>
+            <p class="fs-3 text-dark">$ 21.000</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-75">
+          <img src="img/jacket_1.jpg" class="object-fit-md" class="card-img-top" alt="Chaqueta de mujer">
+          <div class="card-body">
+            <h5 class="card-title">Chaqueta indigo 1</h5>
+            <p class="card-text">Chaqueta fina de indigo, mezcla algodón 100%.</p>
+            <p class="fs-3 text-dark">$ 42.000</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-75">
+          <img src="img/vestido_2.jpg" class="object-fit-md" class="card-img-top" alt="Vestido de mujer">
+          <div class="card-body">
+            <h5 class="card-title">Vestido Romance</h5>
+            <p class="card-text">Vestido importado, Cuello halter cruzado con lazada en espalda, vicuña mezcla de algodón.</p>
+            <p class="fs-3 text-dark">$ 29.500</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="img/img-indice-1.jpg" class="object-fit-md" class="card-img-top" alt="Tacones De mujer">
+          <div class="card-body">
+            <h5 class="card-title">Vestido Primavera</h5>
+            <p class="card-text">Vestido confeccionado con tejido en mezcla de lino. Detalle de frunces y bajo con abertura lateral. Cierre en espalda con cremallera oculta en costura.</p>
+            <p class="fs-3 text-dark">$ 38.000</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-75">
+          <img src="img/img-indice-2.jpg" class="object-fit-md" class="card-img-top" alt="Chaqueta de mujer">
+          <div class="card-body">
+            <h5 class="card-title">Tacones Lux</h5>
+            <p class="card-text">Zapato de tacón alto, verde menta. Acabado en punta. Altura del tacón: 10 cm.
+              CORTE
+              86% poliamida
+              14% elastano
+            </p>
+            <p class="fs-3 text-dark">$ 31.000</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card h-100">
+          <img src="img/img-indice-3.jpg" class="object-fit-md" class="card-img-top" alt="Vestido de mujer">
+          <div class="card-body">
+            <h5 class="card-title">Jeans Sunset</h5>
+            <p class="card-text">Jeans de tiro medio confeccionado en hilatura de algodón. Cintura con trabillas y cinco bolsillos. Efecto lavado. Bajo deshilachado. Cierre frontal con botones ocultos por solapa.</p>
+            <p class="fs-3 text-dark">$ 25.000</p>
+            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock contenido%}
