--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block contenido %}
 
+{% comment %} Slider {% endcomment %}
 <section>
     <div class="carrusel">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -34,6 +35,7 @@
 
     </div>
 </section>
+{% comment %} Descuentos {% endcomment %}
 <section class="Descuentos">
     <h2 class="text-center">Descuentos</h2>
         <div class="container">
@@ -57,7 +59,7 @@
             </div>
         </div>
 </section>
-
+{% comment %} Pruductos {% endcomment %}
 <section class="Productos_inicio">
   <h2 class="text-center my-3">Productos</h2>
   <div class="container mb-2">
