--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -6,7 +6,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href= "{% url 'index' %}">
                 <p class="fs-2">{% bs_icon 'house-door' %}Cetta</p>
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
                     <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
+                    <a class="nav-link" href= "{% url 'productos' %}">Productos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">{% bs_icon 'bag-check' %}Descuentos</a>
