--- a/base/templates/descuentos.html
+++ b/base/templates/descuentos.html
@@ -2,32 +2,26 @@
 {% load static %}
 
 {% block contenido %}
-
 {% comment %} Desplegar los productos en la sección. {% endcomment %}
 <section class="servicios">
     <div class="container">
       <div class="row">
 
-      {% for producto in productos%}
+      {% for producto in productos_descuento%}
       <div class="col-md-4">
         <div class="card h-75">
           <img src="{{ producto.imagen.url }}" class="object-fit-md" class="card-img-top" alt="Imágenes de Moda">
           <div class="card-body">
             <h5 class="card-title">{{producto.nombre}}</h5>
             <p class="card-text">{{producto.descripcion}}</p>
-            {% if producto.descuento > 0%}
-              <p class="fs-4 text-danger display-2">Antes $<del>{{producto.precio}}</del></p>
-              <p class="fs-3 text-dark">Ahora $ {{producto.precio_con_descuento}}</p>
-            {% else %}
-              <p class="fs-3 text-dark">$ {{producto.precio}}</p>
-            {% endif %}
-            
+            <p class="fs-4 text-danger display-2">Antes $<del>{{producto.precio}}</del></p>
+            <p class="fs-3 text-dark">Ahora $ {{producto.precio_con_descuento}}</p>
             <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
           </div>
         </div>
       </div>
       {% endfor %} 
- 
+        
       </div>
     </div>
   </section>
