--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -31,10 +31,10 @@
                       Categorías
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="calzado.html">{% bs_icon 'person-walking' %}Calzado</a></li>
-                      <li><a class="dropdown-item" href="vestidos.html">{% bs_icon 'person-standing-dress' %}Vestidos</a></li>
+                      <li><a class="dropdown-item" href="{% url 'calzado' %}">{% bs_icon 'person-walking' %}Calzado</a></li>
+                      <li><a class="dropdown-item" href="{% url 'vestidos' %}">{% bs_icon 'person-standing-dress' %}Vestidos</a></li>
                       <!-- <li><hr class="dropdown-divider"></li> -->
-                      <li><a class="dropdown-item" href="jeans.html">{% bs_icon 'person-standing' %}Jeans</a></li>
+                      <li><a class="dropdown-item" href="{% url 'jeans' %}">{% bs_icon 'person-standing' %}Jeans</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
