--- a/base/templates/partials/footer.html
+++ b/base/templates/partials/footer.html
@@ -4,8 +4,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <a href="{% url 'productos' %}" data-bs-toggle="tooltip" data-bs-placement="right" title="Ir a Sección De Productos"><img src="{% static 'img/logo-d1.png' %}" alt=" Logo de la empresa" class="w-100" class="h-100"></a>
-          <p class="text-center text-white-50">Derechos Reservados &copy; 2023</p>
+          <a href="{% url 'productos' %}" data-bs-toggle="tooltip" data-bs-placement="right" title="Ir a sección de productos"><img src="{% static 'img/logo-d1.png' %}" alt=" Logo de la empresa" class="w-100" class="h-100"></a>
+          <p class="text-center text-white-50">Derechos reservados &copy; 2023</p>
         </div>
         <div class="col-md-4">
           <h5 class="text-center text-success text-opacity-75">Contacto</h5>
@@ -17,10 +17,10 @@
         <div class="col-md-4">
           <h5 class="text-center text-success text-opacity-75">Redes Sociales</h5>
           <ul class="list-unstyled">
-            <li class="text-center"><a href="https://www.facebook.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red Social Facebook">{% bs_icon 'facebook' %}</a></li>
-            <li class="text-center"><a href="https://www.twitter.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red Social Twitter">{% bs_icon 'twitter' %}</a></li>
-            <li class="text-center"><a href="https://www.instagram.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red Social Instagram">{% bs_icon 'instagram' %}</a></li>
-            <li class="text-center"><a href="https://www.linkedin.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red Social Linkedin">{% bs_icon 'linkedin' %}</a></li>
+            <li class="text-center"><a href="https://www.facebook.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social facebook">{% bs_icon 'facebook' %}</a></li>
+            <li class="text-center"><a href="https://www.twitter.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social twitter">{% bs_icon 'twitter' %}</a></li>
+            <li class="text-center"><a href="https://www.instagram.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social instagram">{% bs_icon 'instagram' %}</a></li>
+            <li class="text-center"><a href="https://www.linkedin.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social linkedin">{% bs_icon 'linkedin' %}</a></li>
           </ul>
         </div>
       </div>
