--- a/base/templates/partials/footer.html
+++ b/base/templates/partials/footer.html
@@ -15,7 +15,7 @@
           
         </div>
         <div class="col-md-4">
-          <h5 class="text-center text-success text-opacity-75">Redes Sociales</h5>
+          <h5 class="text-center text-success text-opacity-75">Redes sociales</h5>
           <ul class="list-unstyled">
             <li class="text-center"><a href="https://www.facebook.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social facebook">{% bs_icon 'facebook' %}</a></li>
             <li class="text-center"><a href="https://www.twitter.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="right" title="Red social twitter">{% bs_icon 'twitter' %}</a></li>
