--- a/base/templates/jeans.html
+++ b/base/templates/jeans.html
@@ -10,7 +10,7 @@
 
       {% for producto in productos_jeans%}
       <div class="col-md-4">
-        <div class="card h-75">
+        <div class="card h-auto" style="background:transparent;">
           <img src="{{ producto.imagen.url }}" class="object-fit-md" class="card-img-top" alt="Imágenes de Moda">
           <div class="card-body">
             <h5 class="card-title">{{producto.nombre}}</h5>
@@ -21,8 +21,7 @@
             {% else %}
               <p class="fs-3 text-dark">$ {{producto.precio}}</p>
             {% endif %}
-            
-            <a href="#" class="btn btn-dark bg-gradient">Agregar al Carrito</a>
+            <a href="#" class="btn btn-dark bg-gradient" style="margin-left:28%">Agregar al carrito</a>
           </div>
         </div>
       </div>
