Actualización de estilos.
Actualización de estilos en botones de agregar al carrito.

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -78,8 +78,9 @@
             {% else %}
               <p class="fs-3 text-dark">$ {{prod.precio}}</p>
             {% endif %}
-            
-            <a href="#" class="btn btn-dark bg-gradient" style="margin-left:28%">Agregar al Carrito</a>
+            <div class="row align-items-center">
+              <a href="#" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
+            </div>
           </div>
         </div>
       </div>
