--- a/base/templates/calzado.html
+++ b/base/templates/calzado.html
@@ -21,8 +21,10 @@
             {% else %}
               <p class="fs-3 text-dark">$ {{producto.precio}}</p>
             {% endif %}
-              <a href="#" class="btn btn-dark bg-gradient" style="margin-left:28%">Agregar al carrito</a>            
-          </div>
+            <div class="row align-items-center">
+                <a href="#" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
+              </div>
+            </div>
         </div>
       </div>
       {% endfor %} 
