--- a/base/templates/descuentos.html
+++ b/base/templates/descuentos.html
@@ -16,7 +16,9 @@
             <p class="card-text">{{producto.descripcion}}</p>
             <p class="fs-4 text-danger display-2">Antes $<del>{{producto.precio}}</del></p>
             <p class="fs-3 text-dark">Ahora $ {{producto.precio_con_descuento}}</p>
-            <a href="#" class="btn btn-dark bg-gradient" style="margin-left:28%">Agregar al Carrito</a>
+            <div class="row align-items-center">
+              <a href="#" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
+            </div>
           </div>
         </div>
       </div>
