--- a/base/templates/calzado.html
+++ b/base/templates/calzado.html
@@ -3,6 +3,12 @@
 
 {% block contenido %}
 
+<!-- Creditos:
+  https://www.pexels.com/es-es/buscar/calzado%20de%20mujer/
+  https://pixabay.com/es/images/search/calzado%20de%20mujer/
+  https://www.freepik.es/search?format=search&last_filter=query&last_value=calzado+de+mujer&query=calzado+de+mujer&type=photo
+  -->
+
 {% comment %} Desplegar los productos en la sección. {% endcomment %}
 <section class="Calzado">
     <div class="container">
