--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -3,6 +3,12 @@
 
 {% block contenido %}
 
+<!-- Creditos:
+  https://www.pexels.com/es-es/buscar/moda/ 
+  https://pixabay.com/es/images/search/moda%20mujer/
+  https://www.freepik.es/search?format=search&last_filter=query&last_value=moda+de+mujer&query=moda+de+mujer&type=photo
+  -->
+
 {% comment %} Slider {% endcomment %}
 <section>
     <div class="carrusel">
