--- a/base/templates/jeans.html
+++ b/base/templates/jeans.html
@@ -3,6 +3,12 @@
 
 {% block contenido %}
 
+<!-- Creditos:
+  https://www.pexels.com/es-es/buscar/jeans%20de%20mujer/
+  https://pixabay.com/es/images/search/jeans%20woman/
+  https://www.freepik.es/search?format=search&last_filter=query&last_value=jeans+de+mujer&query=jeans+de+mujer&type=photo
+  -->
+
 {% comment %} Desplegar los productos en la sección. {% endcomment %}
 <section class="Jeans">
     <div class="container">
