--- a/base/templates/vestidos.html
+++ b/base/templates/vestidos.html
@@ -3,6 +3,12 @@
 
 {% block contenido %}
 
+<!-- Creditos:
+  https://www.pexels.com/es-es/buscar/vestidos%20de%20mujer/
+  https://pixabay.com/es/images/search/vestidos%20de%20mujer/
+  https://www.freepik.es/search?format=search&last_filter=query&last_value=vestidos+de+mujer&query=vestidos+de+mujer&type=photo
+  -->
+
 {% comment %} Desplegar los productos en la sección. {% endcomment %}
 <section class="Vestidos">
     <div class="container">
