--- a/base/templates/descuentos.html
+++ b/base/templates/descuentos.html
@@ -2,6 +2,13 @@
 {% load static %}
 
 {% block contenido %}
+
+<!-- Creditos:
+  https://www.pexels.com/es-es/buscar/moda/ 
+  https://pixabay.com/es/images/search/moda%20mujer/
+  https://www.freepik.es/search?format=search&last_filter=query&last_value=moda+de+mujer&query=moda+de+mujer&type=photo
+  -->
+
 {% comment %} Desplegar los productos en la sección. {% endcomment %}
 <section class="servicios">
     <div class="container">
