--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -15,7 +15,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="registro.html">Registrarse</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
@@ -37,6 +37,15 @@
                       <li><a class="dropdown-item" href="{% url 'jeans' %}">{% bs_icon 'person-standing' %}Jeans</a></li>
                     </ul>
                   </li>
+                  
+                  {% comment %} {% if user.is_authenticated %}
+                      <p class="text-white">Bienvenido,</p>
+                      <!-- Contenido para usuarios autenticados -->
+                  {% else %}
+                      <p class="text-white">Por favor, inicia sesión para acceder a esta parte.</p>
+                      <!-- Contenido para usuarios no autenticados -->
+                  {% endif %} {% endcomment %}
+                
                   <li class="nav-item">
                     <a class="nav-link" href="#" data-bs-toggle="tooltip" data-bs-placement="right" title="Carrito de compras">
                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
