--- a/base/templates/partials/scripts.html
+++ b/base/templates/partials/scripts.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% comment %} {% load static %}
 
 <!- para las alertas ->
 <script src="{% static "Toastr/js/toastr.min.js" %}"></script>
@@ -15,5 +15,5 @@
     });
     </script>
   {% endfor %}
-{% endif %}
+{% endif %} {% endcomment %}
 
