--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -43,7 +43,7 @@
 </section>
 <!-- Carrito -->
 {% if user.is_authenticated %}
-<div class="container bg-dark bg-opacity-75 bg-gradient rounded w-auto  mt-1" style="position: sticky; top:0rem; z-index: 1;">
+<div class="container bg-dark bg-opacity-75 bg-gradient rounded w-auto  mt-1" style="position: sticky; top:0rem; z-index: 1;" id="carrito_seccion">
   <div class="row my-1 pt-1">
     <div class="col-2">
       <button type="button" class="btn btn-outline-info rounded-circle">1</button>
@@ -151,9 +151,16 @@
             {% else %}
               <p class="fs-3 text-dark">$ {{prod.precio}}</p>
             {% endif %}
+            <!-- Si el usuario esta autenticado, lleva a carrito; sino dirije a registro -->
+            {% if user.is_authenticated %}
             <div class="row align-items-center">
-              <a href="#" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
+              <a href="#carrito_seccion" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
             </div>
+            {% else %}
+            <div class="row align-items-center">
+              <a href="{% url 'registro' %}" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
+            </div>
+            {% endif %}
           </div>
         </div>
       </div>
