--- a/base/templates/partials/body.html
+++ b/base/templates/partials/body.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'Swiper/swiper-bundle.min.css' %}"/>
     <link rel="shortcut icon" href="{% static 'img/icon_3.png' %}"> {% endcomment %}
     <!- para las alertas ->
-    <link href="{% static 'Toastr/css/toastr.min.css' %}" rel="stylesheet">
+    <!--<link href="{% static 'Toastr/css/toastr.min.css' %}" rel="stylesheet">-->
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
     {% include 'partials/header.html' %}
