--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -14,9 +14,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <!-- Si el usuario esta autenticado, pass; sino dirije a registro -->
+                  {% if user.is_authenticated %}
+                  <li class="nav-item">
+                    <p></p>
+                  </li>
+                  {% else %}
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
                   </li>
+                  {% endif %}
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
                   </li>
@@ -61,16 +68,26 @@
                       <p></p>
                       <!-- Contenido para usuarios no autenticados -->
                   {% endif %} 
-                
+                  <!-- Si el usuario esta autenticado, lleva a carrito; sino dirije a registro -->
+                  {% if user.is_authenticated %}
                   <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="tooltip" data-bs-placement="right" title="Carrito de compras">
+                    <a class="nav-link" href="#carrito_seccion" data-bs-toggle="tooltip" data-bs-placement="right" title="Carrito de compras">
                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                       </svg>
                     </a>
                     <!-- <a class="nav-link disabled" >Deshabilitado</a> -->
                   </li> 
-                  
+                  {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'registro' %}" data-bs-toggle="tooltip" data-bs-placement="right" title="Carrito de compras">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                      </svg>
+                    </a>
+                    <!-- <a class="nav-link disabled" >Deshabilitado</a> -->
+                  </li>
+                  {% endif %}
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
