--- a/base/templates/comercial/registro.html
+++ b/base/templates/comercial/registro.html
@@ -1,8 +1,20 @@
 {% extends 'partials/body.html' %}
-{% load static %}
+{% load crispy_forms_tags %}
+{% load bootstrap_icons %}
+
 
 {% block contenido %}
 
-<p>{{titulo}}</p>
-
+<div class="container-fluid m-4 row">
+    {% comment %} {% if perms.comunidad.add_usuario %} {% endcomment %}
+      <div class="rounded card p-3 col-md-3">
+        <form method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          {{ form }}
+          <input class="btn btn-success" type="submit" value="{{ accion }}" />
+          <a href="{% url 'index' %}" class="btn btn-danger">Cancelar</a>
+        </form>
+      </div>
+    {% comment %} {% endif %} {% endcomment %}
+</div>
 {% endblock contenido%}
