--- a/base/templates/comercial/registro.html
+++ b/base/templates/comercial/registro.html
@@ -7,12 +7,12 @@
 
 <div class="container-fluid m-4 row">
     {% comment %} {% if perms.comunidad.add_usuario %} {% endcomment %}
-      <div class="rounded card p-3 col-md-3">
+      <div class="rounded card p-3 col-md-5">
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {{ form }}
-          <input class="btn btn-success" type="submit" value="{{ accion }}" />
-          <a href="{% url 'index' %}" class="btn btn-danger">Cancelar</a>
+          <input class="btn btn-outline-success mt-2" type="submit" value="{{ accion }}" />
+          <a href="{% url 'index' %}" class="btn btn-outline-danger mt-2">Cancelar</a>
         </form>
       </div>
     {% comment %} {% endif %} {% endcomment %}
