no se agregan los usuaios.
no se agregan los usuaios a la base de datos.

--- a/base/templates/comercial/registro.html
+++ b/base/templates/comercial/registro.html
@@ -14,7 +14,7 @@
             <table>
               <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form.as_table }}
+                {{ form }}
               </form>
             </table>
           <input class="btn btn-outline-success mt-2 btn-sm" type="submit" value="{{ accion }}" />
