--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -5,7 +5,7 @@
 <header class="bg-dark bg-gradient">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient">
-            <div class="container-fluid">
+            <div class="container">
               <a class="navbar-brand" href= "{% url 'index' %}">
                 <p class="fs-2" data-bs-toggle="tooltip" data-bs-placement="right" title="Inicio">{% bs_icon 'house-door' %}Cetta</p>
               </a>
@@ -13,7 +13,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
                   </li>
@@ -47,10 +47,10 @@
                       <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="comprasUsuario.html">Mis Compras</a></li>
-                      <li><a class="dropdown-item" href="actualizar_Datos.html">Actualizar Datos</a></li>
+                      <li><a class="dropdown-item" href="comprasUsuario.html">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
+                      <li><a class="dropdown-item" href="actualizar_Datos.html">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
-                      <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                      <li><a class="dropdown-item" href="#">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
                     </ul>
                    <!--  <ul class="dropdown-menu">
                       ...
