Margin Button en cards.

--- a/base/templates/jeans.html
+++ b/base/templates/jeans.html
@@ -82,7 +82,7 @@
 
       {% for producto in productos_jeans%}
       <div class="col-md-4">
-        <div class="card h-auto" style="background:transparent;">
+        <div class="card h-auto mb-1" style="background:transparent;">
           <img src="{{ producto.imagen.url }}" class="object-fit-md" class="card-img-top" alt="Imágenes de Moda">
           <div class="card-body">
             <h5 class="card-title">{{producto.nombre}}</h5>
