--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -40,7 +40,7 @@
                   <!--Menú de usuario-->
                   {% if user.is_authenticated %}
                   <div class="btn-group">
-                    <button class="btn btn-secondary bg-gradient btn-sm" type="button">
+                    <button class="btn btn-secondary bg-gradient btn-sm" type="button">{% bs_icon 'person-circle' %}
                       Usuario
                     </button>
                     <button type="button" class="btn btn-sm btn-dark bg-gradient dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
