Actualización del 29 de Enero.

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -43,18 +43,18 @@
 </section>
 <!-- Carrito -->
 {% if user.is_authenticated %}
-<div class="container bg-dark bg-opacity-75 bg-gradient rounded w-auto  mt-1" style="position: sticky; top:0rem; z-index: 1;">
+<div class="container bg-light bg-opacity-75 bg-gradient rounded w-auto mt-1" style="position: sticky; top:0rem; z-index: 1;">
   <div class="row my-1 pt-1">
     <div class="col-2">
-      <button type="button" class="btn btn-outline-info rounded-circle">1</button>
+      <button type="button" class="btn btn-outline-dark rounded-circle">1</button>
       <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
       </svg> -->
     </div>
-    <div class="col-3 align-items-center text-white-50">
+    <div class="col-3 align-items-center text-black">
       <h6>Tacones lux</h6>
     </div>
-    <div class="col-3 align-items-center text-white-50">
+    <div class="col-3 align-items-center text-black">
       <h6>$ 31.000</h6>
     </div>
     <div class="col-2 align-items-end">
@@ -66,15 +66,15 @@
   </div>
   <div class="row">
     <div class="col-2">
-      <button type="button" class="btn btn-outline-info rounded-circle">3</button>
+      <button type="button" class="btn btn-outline-dark rounded-circle">3</button>
       <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
       </svg> -->
     </div>
-    <div class="col-3 text-white-50">
+    <div class="col-3 text-black">
       <h6>Vestido romance</h6>
     </div>
-    <div class="col-3 align-items-center text-white-50">
+    <div class="col-3 align-items-center text-black">
       <h6>$ 42.000</h6>
     </div>
     <div class="col-2 align-items-end">
@@ -135,7 +135,7 @@
 {% comment %} Pruductos {% endcomment %}
 <section class="Productos_inicio">
   <h2 class="text-center my-3">Productos</h2>
-  <div class="container mb-2">
+  <div class="container bg-dark mb-2">
     <div class="row">
       
       {% for prod in producto_index%}
@@ -143,13 +143,13 @@
         <div class="card h-auto" style="background:transparent">
           <img src="{{ prod.imagen.url }}" class="object-fit-md" class="card-img-top" style="height:25rem" alt="Chaqueta de mujer">
           <div class="card-body">
-            <h5 class="card-title">{{prod.nombre}}</h5>
-            <p class="card-text">{{prod.descripcion}}</p>
+            <h5 class="card-title text-white-50">{{prod.nombre}}</h5>
+            <p class="card-text text-white-50">{{prod.descripcion}}</p>
             {% if prod.descuento > 0%}
               <p class="fs-4 text-danger display-2">Antes $<del>{{prod.precio}}</del></p>
-              <p class="fs-3 text-dark">Ahora $ {{prod.precio_con_descuento}}</p>
+              <p class="fs-3 text-white-50">Ahora $ {{prod.precio_con_descuento}}</p>
             {% else %}
-              <p class="fs-3 text-dark">$ {{prod.precio}}</p>
+              <p class="fs-3 text-white-50">$ {{prod.precio}}</p>
             {% endif %}
             <div class="row align-items-center">
               <a href="#" class="btn btn-outline-success bg-gradient">Agregar al carrito</a>
