--- a/base/templates/partials/body.html
+++ b/base/templates/partials/body.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="{% static 'img/icon_3.png' %}"> {% endcomment %}
     <!- para las alertas ->
     {% comment %} <link href="{% static 'Toastr/css/toastr.min.css' %}" rel="stylesheet"> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/mis_estilos.css' %}"/>
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
     {% include 'partials/header.html' %}
