--- a/base/templates/jeans.html
+++ b/base/templates/jeans.html
@@ -1,5 +1,6 @@
 {% extends 'partials/body.html' %}
 {% load static %}
+{% load bootstrap_icons %}
 
 {% block contenido %}
 
@@ -14,7 +15,7 @@
     <div class="container">
       <!-- Carrito -->
       {% if user.is_authenticated %}
-      <div class="container bg-light bg-opacity-75 bg-gradient rounded w-auto mt-1" style="position: sticky; top:0rem; z-index: 1;">
+      {% comment %} <div class="container bg-light bg-opacity-75 bg-gradient rounded w-auto mt-1" style="position: sticky; top:0rem; z-index: 1;">
         <div class="row my-1 pt-1">
           <div class="col-2">
             <button type="button" class="btn btn-outline-dark rounded-circle">1</button>
@@ -72,6 +73,54 @@
             <button type="button" class="btn btn-light btn-sm">Cancelar</button>
           </div>
         </div> 
+      </div> {% endcomment %}
+      <div class="btn-group" id="carrito">
+        <button class="btn btn-secondary bg-gradient btn-md" type="button">{% bs_icon 'person-circle' %}
+          Carrito
+        </button>
+        <button type="button" class="btn btn-sm btn-dark bg-gradient dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+          <span class="visually-hidden">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li>
+            <table class="table table-striped table-hover table-sm">
+              <thead>
+                  <tr>
+                      <th>Cantidad</th>
+                      <th>Articulo</th>
+                      <th>Precio unitario</th>
+                      <th>Talla</th>
+                      <th>Adicionar</th>
+                      <th>Restar</th>
+                      <!-- Otros encabezados según tus campos -->
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>1</td>
+                      <td>Tacones lux</td>
+                      <td>$ 31.000</td>
+                      <td>
+                        <select class="form-select form-select-sm" aria-label="Small select example">
+                          <option selected>Selecciona la talla</option>
+                          <option value="1">S</option>
+                          <option value="2">M</option>
+                          <option value="3">L</option>
+                          <option value="3">XL</option>
+                        </select>
+                      </td>
+                      <td>
+                        <button type="button" class="btn btn-outline-success btn-sm">+</button>
+                      </td>
+                      <td>
+                        <button type="button" class="btn btn-outline-danger btn-sm">-</button>
+                      </td>
+                      <!-- Otros campos según tus necesidades -->
+                  </tr>
+              </tbody>
+            </table>
+          <li>
+      </ul>
       </div>
         <!-- Contenido para usuarios autenticados -->
       {% else %}
