--- a/base/templates/carrito.html
+++ b/base/templates/carrito.html
@@ -36,8 +36,8 @@
                     </select>
                   </td>
                   <td>
-                    <button type="button" class="btn btn-outline-success btn-sm">+</button>
-                    <button type="button" class="btn btn-outline-danger btn-sm">-</button>
+                    <button type="button" class="btn btn-outline-success btn-sm" data-bs-toggle="tooltip" data-bs-placement="right" title="Agregar un producto mas">+</button>
+                    <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="tooltip" data-bs-placement="right" title="Restar un producto">-</button>
                   </td>
                   <!-- Otros campos según tus necesidades -->
               </tr>
