--- a/base/templates/ayuda.html
+++ b/base/templates/ayuda.html
@@ -12,8 +12,8 @@
   </nav>   
 </div>
 
-<div class="container" id="ayuda">
-  <div class="row">
+<div class="container">
+  <div class="row" id="ayuda">
     <div class="col-md">
   <h2>Ayuda</h2> 
   <p><pre>
@@ -41,9 +41,9 @@ Puede incluir preguntas frecuentes, tutoriales paso a paso y opciones de contact
 <hr>
     </div>
   </div>
-</div> 
 
-<div class="container" id="preguntas">
+<div class="row" id="preguntas">
+  <div class="col-md">
   <h2>Preguntas frecuentes</h2>
     <p><pre>
 Algunas preguntas que podrían surgir de los usuario/as en relación con la tienda online <b>Cetta</b> y sus funcionalidades:
@@ -78,8 +78,10 @@ Algunas preguntas que podrían surgir de los usuario/as en relación con la tien
     Los únicos productos susceptibles de ser devueltos, son los pertenecientes a la categoría de calzado, condicionado esto al optimo estado del producto. Para tal fin el usuario/a debe comunicarse con las líneas de atención al cliente o al correo proporcionado para tal fin.
 </pre></p>
 <hr>
+  </div>
 </div>
-<div class="container" id="contacto">
+<div class="row" id="contacto">
+  <div class="col-md">
   <h2>Lineas de atención y contacto</h2>
     <p><pre>
   Líneas de atención y contacto.
@@ -88,6 +90,8 @@ Algunas preguntas que podrían surgir de los usuario/as en relación con la tien
       
 </pre></p>
 <hr>
+  </div>
+</div>
 </div>
 
 
