Cerrar sesión Ok.

--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -54,7 +54,7 @@
                       <li><a class="dropdown-item" href="comprasUsuario.html">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
                       <li><a class="dropdown-item" href="actualizar_Datos.html">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
-                      <li><a class="dropdown-item" href="#">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
+                      <li><a class="dropdown-item" href="{% url 'logout' %}">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
                     </ul>
                    <!--  <ul class="dropdown-menu">
                       ...
