--- a/base/templates/comercial/registro.html
+++ b/base/templates/comercial/registro.html
@@ -9,6 +9,7 @@
     <title>Cetta - {{titulo}}</title>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
 
