Actualziar datos de usuario. attempt.

--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -51,8 +51,8 @@
                       <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="comprasUsuario.html">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
-                      <li><a class="dropdown-item" href="actualizar_Datos.html">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
+                      <li><a class="dropdown-item" href="#">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
+                      <li><a class="dropdown-item" href="{% url 'actualizar_datos' %}">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
                       <li><a class="dropdown-item" href="{% url 'logout' %}">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
                     </ul>
