--- a/base/templates/detalle_producto.html
+++ b/base/templates/detalle_producto.html
@@ -48,7 +48,7 @@
                     </button>
                   </div>
                 <div class="modal-body">
-                    <h5 class="text-dark">Para comprar productos, primero debes regístrarte. ! No tomará mucho tiempo ¡</h5>
+                    <h5 class="text-dark">Primero debes regístrarte. ! No tomará mucho tiempo ¡</h5>
                 </div>
                 <div class="modal-footer">
                     <button id="botonCerrarModal" type="button" class="btn btn-secondary bg-gradient" data-dismiss="modal">Cerrar</button>
