--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -52,7 +52,7 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
-                      <li><a class="dropdown-item" href="{% url 'actualizar_datos' %}">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
+                      <li><a class="dropdown-item" href="{% url 'actualizar_datos' user.id %}">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
                       <li><a class="dropdown-item" href="{% url 'logout' %}">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
                     </ul>
